--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,9 @@ dependencies:
   get_it: ^7.2.0
   cached_network_image: ^3.2.3
   shimmer: ^2.0.0
+  freezed_annotation: ^2.2.0
+  freezed: ^2.2.1
+  json_annotation: ^4.7.0
 
 dev_dependencies:
   flutter_test:
@@ -44,6 +47,8 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+  json_serializable: ^6.3.1
+  build_runner: ^2.2.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
